layout bugfixing

--- a/src/provisioning/default/components/Tenants/styles.css
+++ b/src/provisioning/default/components/Tenants/styles.css
@@ -321,3 +321,7 @@ textarea {
   position: relative;
   margin-top: -434px;
 }
+
+.table-cell {
+  word-break: break-word;
+}
